--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.0",
-    "typeface-roboto": "^1.1.13"
+    "typeface-roboto": "^1.1.13",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@types/node": "^20",
