--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.1.4",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.8",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-responsive-carousel": "^3.2.23",
