--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
+    "@googlemaps/js-api-loader": "^1.16.6",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.25",
+    "google-map-react": "^2.2.1",
+    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.3.0",
     "next": "14.1.4",
+    "ol": "^9.1.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.8",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.7",
     "react-responsive-carousel": "^3.2.23",
     "react-scroll-parallax": "^3.4.5",
     "react-slick": "^0.30.2",
@@ -27,6 +34,8 @@
     "util": "^0.12.5"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.55.7",
+    "@types/leaflet": "^1.9.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
