--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@googlemaps/js-api-loader": "^1.16.6",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.25",
-    "google-map-react": "^2.2.1",
     "leaflet": "^1.9.4",
-    "mapbox-gl": "^3.3.0",
+    "leaflet-extra-markers": "^1.2.2",
     "next": "14.1.4",
     "ol": "^9.1.0",
     "react": "^18.2.0",
@@ -24,7 +22,6 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
-    "react-map-gl": "^7.1.7",
     "react-responsive-carousel": "^3.2.23",
     "react-scroll-parallax": "^3.4.5",
     "react-slick": "^0.30.2",
@@ -34,7 +31,6 @@
     "util": "^0.12.5"
   },
   "devDependencies": {
-    "@types/google.maps": "^3.55.7",
     "@types/leaflet": "^1.9.11",
     "@types/node": "^20",
     "@types/react": "^18",
