--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "axios": "^1.6.8",
+    "country-flag-icons": "^1.5.11",
     "framer-motion": "^11.0.25",
     "leaflet": "^1.9.4",
     "leaflet-extra-markers": "^1.2.2",
+    "lint-staged": "^15.2.2",
     "next": "14.1.4",
     "ol": "^9.1.0",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.8",
     "react-awesome-slider": "^4.1.0",
@@ -27,22 +31,24 @@
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.0",
     "tailwindcss-animated": "^1.0.1",
     "typeface-roboto": "^1.1.13",
     "util": "^0.12.5"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.0.2",
+    "@eslint/js": "^9.1.1",
     "@types/leaflet": "^1.9.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4",
+    "globals": "^15.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5.4.5"
   }
 }
