--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "axios": "^1.6.8",
     "country-flag-icons": "^1.5.11",
+    "eslint-plugin-react": "^7.34.1",
     "framer-motion": "^11.0.25",
     "leaflet": "^1.9.4",
     "leaflet-extra-markers": "^1.2.2",
