--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
+    "@next/env": "^14.2.3",
+    "@react-email/render": "^0.0.13",
+    "@sendgrid/mail": "^8.1.3",
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "country-flag-icons": "^1.5.11",
     "eslint-plugin-react": "^7.34.1",
+    "express": "^4.19.2",
     "framer-motion": "^11.0.25",
+    "http-proxy-middleware": "^3.0.0",
     "leaflet": "^1.9.4",
     "leaflet-extra-markers": "^1.2.2",
     "lint-staged": "^15.2.2",
@@ -31,6 +37,7 @@
     "react-scroll-parallax": "^3.4.5",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
+    "resend": "^3.2.0",
     "slick-carousel": "^1.8.1",
     "tailwindcss-animated": "^1.0.1",
     "typeface-roboto": "^1.1.13",
@@ -41,6 +48,7 @@
     "@eslint/js": "^9.1.1",
     "@types/leaflet": "^1.9.11",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
