--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-email/render": "^0.0.13",
     "@sendgrid/mail": "^8.1.3",
     "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "country-flag-icons": "^1.5.11",
     "eslint-plugin-react": "^7.34.1",
@@ -37,7 +38,7 @@
     "react-scroll-parallax": "^3.4.5",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
-    "resend": "^3.2.0",
+    "resend": "^2.1.0-canary.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss-animated": "^1.0.1",
     "typeface-roboto": "^1.1.13",
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
     "@eslint/js": "^9.1.1",
+    "@types/body-parser": "^1.19.5",
     "@types/leaflet": "^1.9.11",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
