--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
+    "@hookform/resolvers": "^3.4.0",
     "@next/env": "^14.2.3",
     "@react-email/render": "^0.0.13",
     "@sendgrid/mail": "^8.1.3",
@@ -32,7 +33,10 @@
     "react-awesome-reveal": "^4.2.8",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.4",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-input-mask": "^2.0.4",
     "react-leaflet": "^4.2.1",
     "react-responsive-carousel": "^3.2.23",
     "react-scroll-parallax": "^3.4.5",
@@ -42,7 +46,8 @@
     "slick-carousel": "^1.8.1",
     "tailwindcss-animated": "^1.0.1",
     "typeface-roboto": "^1.1.13",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
