--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "express": "^4.19.2",
     "framer-motion": "^11.0.25",
     "http-proxy-middleware": "^3.0.0",
+    "i18next": "^23.11.4",
+    "i18next-resources-to-backend": "^1.2.1",
     "leaflet": "^1.9.4",
     "leaflet-extra-markers": "^1.2.2",
     "lint-staged": "^15.2.2",
     "next": "14.1.4",
+    "next-i18n-router": "^5.4.2",
     "ol": "^9.1.0",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
@@ -35,6 +38,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^14.1.1",
     "react-icons": "^5.0.1",
     "react-input-mask": "^2.0.4",
     "react-leaflet": "^4.2.1",
