--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.11.4",
     "@hookform/resolvers": "^3.4.0",
     "@next/env": "^14.2.3",
+    "@nextui-org/dropdown": "^2.1.23",
+    "@nextui-org/react": "^2.3.6",
     "@react-email/render": "^0.0.13",
     "@sendgrid/mail": "^8.1.3",
     "axios": "^1.6.8",
@@ -30,6 +32,7 @@
     "lint-staged": "^15.2.2",
     "next": "14.1.4",
     "next-i18n-router": "^5.4.2",
+    "next-i18next": "^15.3.0",
     "ol": "^9.1.0",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
